fix: resolved virtual keyboard bug on iOS devices. Chat container now adjusts to the actual window height dynamically when the keyboard is opened or closed

--- a/src/outer.module.css
+++ b/src/outer.module.css
@@ -3,6 +3,19 @@
     transform: scale(0.5);
 }*/
 
+:root {
+    --is-mobile-screen-mq: (max-width: 460px);
+    --is-touch-device-mq: (pointer: coarse);
+}
+
+@custom-media --mobile-screen (max-width: 460px);
+
+html:has(.chat-animation-opened) {
+    @media(--mobile-screen) {
+        overscroll-behavior: none;
+    }
+}
+
 .button {
     position: fixed;
     right: 10px;
@@ -57,15 +70,19 @@
 /* animation classes for chat wrapper element */
 
 .chat {
+    overflow: hidden;
     max-width: 370px;
     width: 100%;
-    height: 350px;
+    height: 80vh;
+    max-height: 800px;
     border: 1px solid rgb(230, 230, 230);
+    border-radius: var(--bdradius, 8px);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 4px 8px rgba(0, 0, 0, 0.12);
     visibility: hidden;
     pointer-events: none;
     transition: none;
 
-    @media(max-width: 460px) {
+    @media(--mobile-screen) {
         position: fixed;
         top: var(--chat-node-top-offset, 0);
         left: 0;
@@ -76,6 +93,8 @@
         max-height: none !important;
         border: 0;
         border-top: 1px solid rgb(230, 230, 230);
+        border-radius: 8px;
+        box-shadow: none;
     }
 
     @media(prefers-reduced-motion) {
